# JustVibeCoding

./: .gitignore  README.md  pyproject.toml
backend/: main.py  requirements.txt
frontend/: index.html  results.html  script.js  styles.css
guides/: ARCHITECTURE.md  BUILD_COMPLETE.txt  DEPLOYMENT.md  FINAL_SUMMARY.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  SETUP_CHECKLIST.md  WELCOME.md  prompt.txt
tests/: archive.json  test.json  test.py  test1.json  test1.py
